force-app/main/default/objects/Project_Engagement__c/Project_Engagement__c.object-meta.xml
<CustomObject>
    <label>Project Engagement</label>
    <nameField>
        <displayFormat>BMPE-{000000}</displayFormat>
        <label>Project Engagement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>