force-app/main/default/objects/Project_Engagement__c/fields/External_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Project_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Project Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>