force-app/main/default/objects/Project_Engagement__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Engagements</relationshipLabel>
    <relationshipName>Project_Engagements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>